--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 node_modules
 .env
 package-lock.json
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+artifacts
+
