--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bootstrap": "^5.2.3",
     "detect-zoom": "^1.0.2",
     "dotenv": "^16.0.3",
-    "ethers": "^6.2.3",
+    "ethers": "^5.7.2",
     "framer-motion": "^8.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
+    "@nomiclabs/hardhat-ethers": "^2.2.2",    
     "hardhat": "^2.13.0"
   }
 }
